# ron-fun

./: .gitignore  PRD.md  README.md  analytics.config.js  git-push.bat  git-push.sh  package-lock.json  postcss.config.js  summary.md  todo.md
ron-fun-project/ron-fun-backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_demo.py  todo.md
ron-fun-project/ron-fun-backend/alembic/: env.py
ron-fun-project/ron-fun-backend/app/: main.py
ron-fun-project/ron-fun-backend/app/api/: deps.py
ron-fun-project/ron-fun-backend/app/core/: auth.py  config.py  security.py
ron-fun-project/ron-fun-backend/app/db/: __init__.py  init_db.py  session.py
ron-fun-project/ron-fun-backend/app/middleware/: __init__.py  authentication.py  exception.py  logger.py  response.py  validation.py
ron-fun-project/ron-fun-backend/app/models/: __init__.py  application.py  banner.py  base.py  lottery.py  order.py  point.py  product.py  user.py  vip.py
ron-fun-project/ron-fun-backend/app/schemas/: __init__.py  auth.py  common.py  home.py  lottery.py  product.py  token.py  user.py
ron-fun-project/ron-fun-backend/app/services/: application_service.py  auth.py  banner_service.py  (+4 more)
ron-fun-project/ron-fun-backend/deploy/: .env.prod  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  start.sh
ron-fun-project/ron-fun-backend/docs/: architecture.md  deployment_guide.md
ron-fun-project/ron-fun-backend/migrations/: env.py
ron-fun-project/ron-fun-backend/scripts/: init_db.py
ron-fun-project/ron-fun-backend/tests/: __init__.py  conftest.py  run_tests.py
(+31 files in other folders)
